pip install pandas numpy PyQt5 추가 - 필요한 패키지들을 명시적으로 설치 pip 업그레이드 단계 추가

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,9 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
+        python -m pip install --upgrade pip
+        pip install pandas numpy PyQt5
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run Python
       run: |
-        python3 TX7332_Pattern_Delay_Gen.py
+        python TX7332_Pattern_Delay_Gen.py
