--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,11 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
+        sudo apt-get update
+        sudo apt-get install -y xvfb
         python -m pip install --upgrade pip
         pip install pandas numpy PyQt5
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run Python
       run: |
-        python TX7332_Pattern_Delay_Gen.py
+        xvfb-run python TX7332_Pattern_Delay_Gen.py
