main.yml에서 파일 경로를 확인하는 단계를 추가 운영체제에 따라 자동으로 경로를 설정하도록 Python 코드를 수정

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,11 @@ jobs:
         pip install pandas numpy PyQt5
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         
+    - name: Check file structure
+      run: |
+        pwd
+        ls -la
+        
     - name: Run Python
       run: |
         export QT_DEBUG_PLUGINS=1
