paths-ignore 추가: 문서 파일 등 불필요한 파일 변경 시 액션 실행 방지 concurrency 설정 추가: 동일한 워크플로우의 중복 실행 방지 진행 중인 워크플로우는 새로운 워크플로우가 시작되면 자동 취소됨

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,12 +3,24 @@ name: Python package
 on:
   push:
     branches: [ "main" ]
+    paths-ignore:
+      - '**.md'
+      - '.gitignore'
+      - 'LICENSE'
   pull_request:
     branches: [ "main" ]
+    paths-ignore:
+      - '**.md'
+      - '.gitignore'
+      - 'LICENSE'
 
 jobs:
   build:
     runs-on: ubuntu-22.04
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: true
+      
     strategy:
       matrix:
         python-version: ["3.11"]
