Python 코드에 CI 환경 감지 로직 추가 CI 환경에서는 3초 후 자동 종료 GitHub Actions에 CI 환경변수 추가 timeout 명령어로 10초 후 강제 종료 (백업 옵션) || true를 추가하여 timeout으로 인한 종료를 오류로 처리하지 않음

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,9 +46,11 @@ jobs:
         ls -la
         
     - name: Run Python
+      env:
+        CI: true
       run: |
         export QT_DEBUG_PLUGINS=1
         export DISPLAY=:99
         Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
         sleep 3
-        python3 TX7332_Pattern_Delay_Gen.py
+        timeout 10s python3 TX7332_Pattern_Delay_Gen.py || true
