paths-ignore에 'README.md' 명시적으로 추가 향후 문서 폴더 추가를 대비해 'docs/**' 추가 기존의 '**.md'는 모든 마크다운 파일을 제외하므로 유지

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,12 +7,16 @@ on:
       - '**.md'
       - '.gitignore'
       - 'LICENSE'
+      - 'README.md'
+      - 'docs/**'
   pull_request:
     branches: [ "main" ]
     paths-ignore:
       - '**.md'
       - '.gitignore'
       - 'LICENSE'
+      - 'README.md'
+      - 'docs/**'
 
 jobs:
   build:
