이미지 파일을 추가하거나 수정해도 GitHub Actions가 실행되지 않음.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,11 @@ on:
       - 'LICENSE'
       - 'README.md'
       - 'docs/**'
+      - 'img/**'
+      - '**.png'
+      - '**.jpg'
+      - '**.jpeg'
+      - '**.gif'
   pull_request:
     branches: [ "main" ]
     paths-ignore:
@@ -17,6 +22,11 @@ on:
       - 'LICENSE'
       - 'README.md'
       - 'docs/**'
+      - 'img/**'
+      - '**.png'
+      - '**.jpg'
+      - '**.jpeg'
+      - '**.gif'
 
 jobs:
   build:
