--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,18 +88,40 @@ jobs:
 
   # 릴리스 자동화를 위한 새로운 job
   release:
-    needs: build  # build job이 성공한 후에 실행
+    needs: build
     runs-on: ubuntu-latest
-    # 태그가 생성된 경우에만 실행
-    if: startsWith(github.ref, 'refs/tags/')
+    # main 브랜치 푸시에서도 실행되도록 조건 수정
+    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
     
-    # 권한 설정 추가
     permissions:
-      contents: write  # 릴리스 생성을 위한 권한
+      contents: write
     
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0  # 전체 히스토리 가져오기
     
+    # 버전 태그 자동 생성
+    - name: Create version tag
+      if: github.ref == 'refs/heads/main'
+      run: |
+        # 마지막 태그 가져오기
+        latest_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
+        
+        # 버전 번호 증가
+        major=$(echo $latest_tag | cut -d. -f1)
+        minor=$(echo $latest_tag | cut -d. -f2)
+        patch=$(echo $latest_tag | cut -d. -f3)
+        new_patch=$((patch + 1))
+        new_tag="${major}.${minor}.${new_patch}"
+        
+        # 새 태그 생성 및 푸시
+        git config --local user.email "subbylife@gmail.com"
+        git config --local user.name "subbylife"
+        git tag -a $new_tag -m "Release $new_tag"
+        git push origin $new_tag
+    
+    # 버전 태그 자동 생성
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
