태그 생성 단계에 id: create_tag 추가 생성된 태그를 GitHub Actions 출력 변수로 저장 Release 생성 시 생성된 태그를 사용하도록 수정 Release 생성 조건 추가 (태그가 있을 때만 실행)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,23 +104,24 @@ jobs:
     # 버전 태그 자동 생성
     - name: Create version tag
       if: github.ref == 'refs/heads/main'
+      id: create_tag  # 태그 생성 단계에 ID 추가
       run: |
-        # 마지막 태그 가져오기
-        latest_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
+        latest_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "v1.0.0")
         
-        # 버전 번호 증가
-        major=$(echo $latest_tag | cut -d. -f1)
-        minor=$(echo $latest_tag | cut -d. -f2)
-        patch=$(echo $latest_tag | cut -d. -f3)
+        major=$(echo $latest_tag | sed 's/v//' | cut -d. -f1)
+        minor=$(echo $latest_tag | sed 's/v//' | cut -d. -f2)
+        patch=$(echo $latest_tag | sed 's/v//' | cut -d. -f3)
         new_patch=$((patch + 1))
-        new_tag="${major}.${minor}.${new_patch}"
+        new_tag="v${major}.${minor}.${new_patch}"
         
-        # 새 태그 생성 및 푸시
+        echo "Creating new tag: $new_tag"
+        echo "new_tag=${new_tag}" >> $GITHUB_OUTPUT  # 태그 값을 출력 변수로 저장
+        
         git config --local user.email "subbylife@gmail.com"
         git config --local user.name "subbylife"
         git tag -a $new_tag -m "Release $new_tag"
         git push origin $new_tag
-    
+
     # 버전 태그 자동 생성
     - name: Set up Python
       uses: actions/setup-python@v2
@@ -197,12 +198,13 @@ jobs:
     
     # GitHub 릴리스 생성
     - name: Create Release
-      id: create_release
+      if: steps.create_tag.outputs.new_tag != ''  # 태그가 생성된 경우에만 실행
       uses: softprops/action-gh-release@v1
       with:
+        tag_name: ${{ steps.create_tag.outputs.new_tag }}  # 생성된 태그 사용
         files: |
           dist/TX7332_Pattern_Delay_Gen*
-        name: Release ${{ github.ref_name }}
+        name: Release ${{ steps.create_tag.outputs.new_tag }}
         draft: false
         prerelease: false
         generate_release_notes: true
